@startuml

title Ordering System Entities

footer Generated on: 2025-07-21 at 18:06 IST

class UserInfo {
 - String userId
 - String name
 - String email
 - List<DeliveryInfo> savedAddresses
}

class Order {
  - String orderId
  - String userId
  - List<CartItem> items
  - double totalAmount
  - String status
  - LocalDateTime createdAt
  - DeliveryInfo deliveryInfo
  - BillingInfo billingInfo
  - DeliveryTypeEnum deliveryType
}

class Cart {
  - String id
  - String userId
  - List<CartItem> items
}

class CartItem {
  - String productId
  - String productName
  - int quantity
  - double pricePerUnit
}

class DeliveryInfo {
  - String addressLine1
  - String addressLine2
  - String city
  - String state
  - String pincode
  - String contactNumber
}

class BillingInfo {
  - String billingName
  - String billingEmail
  - String billingPhone
  - String billingAddress
  - PaymentTypeEnum paymentMethod
}

UserInfo --> DeliveryInfo
Order --> CartItem
Cart --> CartItem
Order --> DeliveryInfo
Order --> BillingInfo

@enduml
